--- a/HTML & CSS/Vera's Class/Portfolio/04 Portfolio/index.html
+++ b/HTML & CSS/Vera's Class/Portfolio/04 Portfolio/index.html
@@ -110,57 +110,79 @@
       <img class="skills__img" src="/assets/skills.png" alt="" />
     </div>
     <!-- Contact -->
-    <div class="contact section">
+    <div class="contact">
       <!-- Left -->
-      <div class="contact__wrapper-left">
-        <div class="contact__title">
-          <h2 class="contact__h2">Skills</h2>
-          <p class="contact__p">
-            Have an enquiry? Fill out the form to contact me
-          </p>
+      <div class="contact__container">
+        <div class="contact__wrapper-left">
+          <div class="contact__title">
+            <h2 class="contact__h2">Contact Me</h2>
+            <p class="contact__p">
+              Have an enquiry? Fill out the form to contact me
+            </p>
+          </div>
+
+          <ul class="contact__info">
+            <li href="" class="contact__a">
+              <img src="/assets/phone.svg" alt="" />+0123456789
+            </li>
+            <li href="" class="contact__a">
+              <img src="/assets/email.svg" alt="" /> hello@my.email
+            </li>
+            <li href="" class="contact__a">
+              <img src="/assets/pin.svg" alt="" />
+              6391 Elgin St. Celina, Delaware 10299
+            </li>
+          </ul>
+
+          <ul class="contact__socials">
+            <li class="contact__li">
+              <a href="" class="contact__a"
+                ><img src="/assets/instagram.svg" alt=""
+              /></a>
+            </li>
+            <li class="contact__li">
+              <a href="" class="contact__a"
+                ><img src="/assets/dribble.svg" alt=""
+              /></a>
+            </li>
+            <li class="contact__li">
+              <a href="" class="contact__a"
+                ><img src="/assets/twitter.svg" alt=""
+              /></a>
+            </li>
+            <li class="contact__li">
+              <a href="" class="contact__a"
+                ><img src="/assets/youtube.svg" alt=""
+              /></a>
+            </li>
+          </ul>
         </div>
+        <!-- Right -->
+        <div class="contact__wrapper-right">
+          <form action="" class="form">
+            <div class="form__wrapper">
+              <label class="form__label" for="name">Name</label>
+              <input class="form__input" id="name" type="text" required />
+            </div>
+            <div class="form__wrapper">
+              <label class="form__label" for="email">Email</label>
+              <input class="form__input" id="email" type="email" required />
+            </div>
+            <div class="form__wrapper">
+              <label class="form__label" for="message">Message</label>
+              <textarea
+                class="form__textarea"
+                name="message"
+                id="message"
+                cols="30"
+                rows="10"
+                required
+              ></textarea>
+            </div>
 
-        <ul class="contact__info">
-          <li href="" class="contact__a">+0123456789</li>
-          <li href="" class="contact__a">hello@my.email</li>
-          <li href="" class="contact__a">
-            6391 Elgin St. Celina, Delaware 10299
-          </li>
-        </ul>
-
-        <ul class="contact__socials">
-          <li>
-            <a href="" class="contact__a"></a>
-          </li>
-          <li>
-            <a href="" class="contact__a"></a>
-          </li>
-          <li>
-            <a href="" class="contact__a"></a>
-          </li>
-          <li>
-            <a href="" class="contact__a"></a>
-          </li>
-        </ul>
-      </div>
-      <!-- Right -->
-      <div class="contact__wrapper-right">
-        <form action="" class="form">
-          <label class="form__label" for="name">Name</label>
-          <input class="form__input" id="name" type="text" required />
-          <label class="form__label" for="email">Email</label>
-          <input class="form__input" id="email" type="email" required />
-          <label class="form__label" for="message">message</label>
-          <textarea
-            class="form__textarea"
-            name="message"
-            id="message"
-            cols="30"
-            rows="10"
-            required
-          ></textarea>
-          <input type="button" value="Submit" />
-        </form>
+            <input class="form__button" type="button" value="Submit" />
+          </form>
+        </div>
       </div>
     </div>
     <footer class="footer">© 2021 Oliver Janhunen. All rights reserved</footer>
