started responsive img

--- a/HTML & CSS/Vera's Class/Portfolio/04 Portfolio/index.html
+++ b/HTML & CSS/Vera's Class/Portfolio/04 Portfolio/index.html
@@ -50,7 +50,9 @@
       <div class="projects__wrapper">
         <!-- Card -->
         <div class="card">
-          <img src="/assets/projects_1.png" alt="" class="card__img" />
+          <div class="card__img-container">
+            <img src="/assets/projects_1.png" alt="" class="card__img" />
+          </div>
           <div class="card__main">
             <h3 class="card__h3">Static Website</h3>
             <p class="card__p">HTML, CSS, JavaScript</p>
@@ -61,7 +63,9 @@
         </div>
         <!-- Card -->
         <div class="card">
-          <img src="/assets/projects_2.png" alt="" class="card__img" />
+          <div class="card__img-container">
+            <img src="/assets/projects_2.png" alt="" class="card__img" />
+          </div>
           <div class="card__main">
             <h3 class="card__h3">Static Website</h3>
             <p class="card__p">HTML, CSS, JavaScript</p>
@@ -72,7 +76,9 @@
         </div>
         <!-- Card -->
         <div class="card">
-          <img src="/assets/projects_3.png" alt="" class="card__img" />
+          <div class="card__img-container">
+            <img src="/assets/projects_3.png" alt="" class="card__img" />
+          </div>
           <div class="card__main">
             <h3 class="card__h3">Static Website</h3>
             <p class="card__p">HTML, CSS, JavaScript</p>
