--- a/JavaScript/Margit's Class/Tasks/Week_34/Pizza_order/index.html
+++ b/JavaScript/Margit's Class/Tasks/Week_34/Pizza_order/index.html
@@ -35,6 +35,7 @@
                 type="radio"
                 id="pizza-size-2"
                 value="2"
+                checked
               />
               <label for="pizza-size-2">For 2 | 7,50€</label>
             </div>
