js fixed, line 32 error

--- a/JavaScript/Margit's Class/Tasks/Week_35/Healthcare/index.html
+++ b/JavaScript/Margit's Class/Tasks/Week_35/Healthcare/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <header class="header">
         <h1 class="header__h1">Calculate your insurance price</h1>
-        <p class="header__p">
+        <p class="headers__p">
           First, tell me about yourself. Based on your age, income and family
           situation, we recommend you life insurance, serious illness insurance
           or permanent disability insurance. At the same time, you will see an
@@ -113,9 +113,7 @@
             </div>
           </div>
           <div class="form__button">
-            <button id="button" type="submit" onclick="calculateInsurance()">
-              Get evaluation
-            </button>
+            <button id="button" type="submit">Get evaluation</button>
           </div>
         </form>
       </main>
