--- a/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/index.html
+++ b/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/index.html
@@ -28,6 +28,9 @@
           <li class="navbar__link"><a href="#about">About Me</a></li>
           <li class="navbar__link"><a href="#skills">Skills</a></li>
           <li class="navbar__link"><a href="#contact">Contact</a></li>
+          <li class="navbar__link">
+            <a href="/pages/gallery.html">Gallery</a>
+          </li>
         </ul>
         <!-- mobile links -->
         <ul id="navbar__links-mobile" class="navbar__links-mobile">
@@ -42,6 +45,9 @@
           </li>
           <li onclick="navToggle()" class="navbar__link-mobile">
             <a href="#contact">Contact</a>
+          </li>
+          <li class="navbar__link-mobile">
+            <a onclick="navToggle()" href="/pages/gallery.html">Gallery</a>
           </li>
         </ul>
         <div class="navbar__hamburger-menu" onclick="navToggle()">
@@ -268,6 +274,14 @@
         </div>
       </div>
     </div>
-    <footer class="footer">© 2021 Oliver Janhunen. All rights reserved</footer>
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <p class="footer__p">© 2021 Oliver Janhunen. All rights reserved</p>
+        <div class="footer__divider"></div>
+        <a class="footer__a" href="#"
+          ><img src="/assets/back_to_top.svg" alt=""
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
