--- a/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/pages/gallery.html
+++ b/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/pages/gallery.html
@@ -84,7 +84,10 @@
     <footer class="footer">
       <div class="footer__wrapper">
         <p class="footer__p">© 2021 Oliver Janhunen. All rights reserved</p>
-        <a class="footer__a" href="#">back to top</a>
+        <div class="footer__divider"></div>
+        <a class="footer__a" href="#"
+          ><img src="/assets/back_to_top.svg" alt=""
+        /></a>
       </div>
     </footer>
   </body>
